Fixed an overflow issue with wrapping form-item lists.

--- a/Core/EnterpriseWebFramework/StaticFiles/styles/basic.css
+++ b/Core/EnterpriseWebFramework/StaticFiles/styles/basic.css
@@ -289,6 +289,7 @@ ewfStackFormItemList > ewfFormItemListItem > ewfFormItemListItemContent,
 ewfStackFormItemList > ewfFormItemListButtonItem > ewfFormItemListItemContent {
 	align-self: stretch;
 }
+ewfWrappingFormItemList > ewfFormItemListItem, ewfWrappingFormItemList > ewfFormItemListButtonItem,
 ewfGridFormItemList > ewfFormItemListItem, ewfGridFormItemList > ewfFormItemListButtonItem {
 	min-width: 0;
 }
